--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-argparse==1.3.0
-pbr==1.7.0
-pyglet==1.1.4
-six==1.9.0
-stevedore==1.8.0
-virtualenv==1.11.6
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.0
+Flask==0.10.1
+Flask-SQLAlchemy==2.1
+Jinja2==2.8
+MarkupSafe==0.23
+SQLAlchemy==1.0.10
+Werkzeug==0.11.2
+foursquare==20130707
+httplib2==0.9.2
+itsdangerous==0.24
+numpy==1.10.1
+pandas==0.17.1
+poster==0.8.1
+python-dateutil==2.4.2
+pytz==2015.7
+six==1.10.0
 wsgiref==0.1.2
-wxPython==3.0.2.0
-wxPython-common==3.0.2.0
